{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 7,
  "lineage": "d34fc6f3-b72c-5649-31c7-190222513f58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].canada",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:866940357665:security-group/sg-066b526da635089a4",
            "description": "Allow SSH inbound and all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress rule for accepting all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066b526da635089a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Ingress rule for accepting just ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "866940357665",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_SSH"
            },
            "tags_all": {
              "Name": "allow_SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c12a91aebd21d22c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:866940357665:vpc/vpc-092912ef0b1624113",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065281cb075a2dfb2",
            "default_route_table_id": "rtb-0c772bfb39045a569",
            "default_security_group_id": "sg-0d6d74e6a040d4f63",
            "dhcp_options_id": "dopt-0d9819a33d0f3c84f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092912ef0b1624113",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c772bfb39045a569",
            "owner_id": "866940357665"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:866940357665:security-group-rule/sgr-0e776b9f987623147",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Egress rule for accepting all traffic",
            "from_port": null,
            "id": "sgr-0e776b9f987623147",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-066b526da635089a4",
            "security_group_rule_id": "sgr-0e776b9f987623147",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:866940357665:security-group-rule/sgr-0e9d057dd719d476b",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Ingress rule for accepting just ssh traffic",
            "from_port": 22,
            "id": "sgr-0e9d057dd719d476b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-066b526da635089a4",
            "security_group_rule_id": "sgr-0e9d057dd719d476b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_test",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}